# pic2video_workflow

./: .env.example  .gitignore  DESIGN.md  README.md  main.py  pyproject.toml  requirements.txt  setup.sh
examples/: test_api.py  test_api.sh
roleswap/: __init__.py  client.py  config.py  facade.py  log_utils.py  long_video.py  upload_utils.py  video_utils.py  workflow_template.py
scailswap/: __init__.py  blending.py  chunking.py  config.py  errors.py  facade.py  processor.py  progress.py  video_io.py
scailswap/engines/: __init__.py  base.py  comfyui_engine.py  fake_engine.py  fal_engine.py
scailswap/postprocess/: __init__.py  wav2lip.py
scripts/: start_api.sh  start_web.sh  sync.sh
server/: __init__.py  app.py  jobs.py  schemas.py
tests/: test_api_server.py  test_blending.py  test_chunking.py  test_client.py  test_core.py  test_forms.py  test_job_store.py  test_long_video_processor.py  test_upload.py  test_web.py
web/: __init__.py  __main__.py  app.py  forms.py  job_store.py  worker.py
web/static/: app.js  style.css
web/templates/: index.html
